--- a/domain.docker-compose.yaml
+++ b/domain.docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       dockerfile: router.Dockerfile
     labels:
       # 配置域名
-       - "traefik.http.routers.cra.rule=Host(`cra.shanyue.tech`)"
+       - "traefik.http.routers.cra.rule=Host(`www.yedizhang.work`)"
 
        # 配置 TLS
        - traefik.http.routers.cra.tls=true
