--- a/domain.docker-compose.yaml
+++ b/domain.docker-compose.yaml
@@ -9,8 +9,8 @@ services:
        - "traefik.http.routers.cra.rule=Host(`www.yedizhang.work`)"
 
        # 配置 TLS
-       - traefik.http.routers.cra.tls=true
-       - traefik.http.routers.cra.tls.certresolver=le
+#       - traefik.http.routers.cra.tls=true
+#       - traefik.http.routers.cra.tls.certresolver=le
 
 # 一定要与 traefik 在同一网络下
 networks:
