--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -3,7 +3,7 @@ name: Production
 # 执行 CI 的时机: 当 git push 到 master 分支时
 on:
   push:
-    branches:    
+    branches:
       - master
 
 # 执行所有的 jobs
@@ -15,11 +15,11 @@ jobs:
       # 获取 CICD 中的变量: Context
       # https://docs.github.com/en/actions/learn-github-actions/expressions
       name: Deploy
-      url: https://cra.shanyue.tech
+      url: http://www.yedizhang.work
     steps:
       # 切出代码，使用该 Action 将可以拉取最新代码
       - uses: actions/checkout@v2
       - name: Deploy
-        run: docker-compose -f domain.docker-compose.yaml up --build -d domain
+        run: docker-compose -f domain.docker-compose.yaml up  --build -d domain
         env:
           COMMIT_REF_NAME: ${{ github.ref_name }}
