--- a/.github/workflows/ci-parallel.yaml
+++ b/.github/workflows/ci-parallel.yaml
@@ -9,7 +9,15 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
+      - name: Cache Node Modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('yarn.lock') }}
+          restore-keys: node-modules-
       - name: Install Dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: yarn
   lint:
     runs-on: ubuntu-latest
@@ -21,6 +29,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
+      - name: Cache Node Modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('yarn.lock') }}
+          restore-keys: node-modules-
       - name: ESLint
         run: npm run build
   test:
@@ -32,6 +47,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
+      - name: Cache Node Modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('yarn.lock') }}
+          restore-keys: node-modules-
       - name: Test
         run: npm run test
   preview:
