--- a/.github/workflows/ci-parallel.yaml
+++ b/.github/workflows/ci-parallel.yaml
@@ -9,13 +9,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
-#      - name: Cache Node Modules
-#        id: cache-node-modules
-#        uses: actions/cache@v2
-#        with:
-#          path: node_modules
-#          key: node-modules-${{ hashFiles('yarn.lock') }}
-#          restore-keys: node-modules-
+      - name: Cache Node Modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('yarn.lock') }}
+          restore-keys: node-modules-
       - name: Install Dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: yarn
